Added 'todomvc' styles and html markup main structure

--- a/src/app/angular2-todos-playground.component.html
+++ b/src/app/angular2-todos-playground.component.html
@@ -1,3 +1,52 @@
-<h1>
-  {{title}}
-</h1>
+<section class="todoapp">
+  <header class="header">
+    <h1>todos</h1>
+    <input class="new-todo" placeholder="What needs to be done?" autofocus>
+  </header>
+  <!--<new-todo></new-todo>-->
+  <!-- This section should be hidden by default and shown when there are todos -->
+  <section class="main">
+    <input class="toggle-all" type="checkbox" ng-model="allCompleted" ng-change="toggleAll()">
+    <label for="toggle-all">Mark all as complete</label>
+    <ul class="todo-list">
+      <!-- These are here just to show the structure of the list items -->
+      <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
+      <li class="completed">
+        <div class="view">
+          <input class="toggle" type="checkbox" checked>
+          <label>Taste JavaScript</label>
+          <button class="destroy"></button>
+        </div>
+        <input class="edit" value="Create a TodoMVC template">
+      </li>
+      <li>
+        <div class="view">
+          <input class="toggle" type="checkbox">
+          <label>Buy a unicorn</label>
+          <button class="destroy"></button>
+        </div>
+        <input class="edit" value="Rule the web">
+      </li>
+    </ul>
+    <!-- <todo-list list="todos"></todo-list> -->
+  </section>
+  <!-- This footer should hidden by default and shown when there are todos -->
+  <footer class="footer">
+    <!-- This should be `0 items left` by default -->
+    <span class="todo-count"><strong>{{  'todos.length' }}</strong> item left</span>
+    <!-- Remove this if you don't implement routing -->
+    <ul class="filters">
+      <li>
+        <a href ui-sref="all" ng-class="{'selected': statename === 'all'}">All</a>
+      </li>
+      <li>
+        <a href ui-sref="active" ng-class="{'selected': statename === 'active'}">Active</a>
+      </li>
+      <li>
+        <a href ui-sref="completed" ng-class="{'selected': statename === 'completed'}">Completed</a>
+      </li>
+    </ul>
+    <!-- Hidden if no completed items are left ↓ -->
+    <button class="clear-completed" (click)="clearCompleted()">Clear completed</button>
+  </footer>
+</section>
