--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <section class="todoapp">
-  <header class="header">
-    <h1>todos</h1>
-    <input class="new-todo" placeholder="What needs to be done?" autofocus>
-  </header>
-  <!--<new-todo></new-todo>-->
+  <app-new-todo></app-new-todo>
   <!-- This section should be hidden by default and shown when there are todos -->
   <section class="main">
     <input class="toggle-all" type="checkbox" ng-model="allCompleted" ng-change="toggleAll()">
