--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,10 @@
 <section class="todoapp">
-  <app-new-todo></app-new-todo>
-  <!-- This section should be hidden by default and shown when there are todos -->
-  <section class="main">
-    <input class="toggle-all" type="checkbox" ng-model="allCompleted" ng-change="toggleAll()">
-    <label for="toggle-all">Mark all as complete</label>
-    <ul class="todo-list">
-      <!-- These are here just to show the structure of the list items -->
-      <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-      <li class="completed">
-        <div class="view">
-          <input class="toggle" type="checkbox" checked>
-          <label>Taste JavaScript</label>
-          <button class="destroy"></button>
-        </div>
-        <input class="edit" value="Create a TodoMVC template">
-      </li>
-      <li>
-        <div class="view">
-          <input class="toggle" type="checkbox">
-          <label>Buy a unicorn</label>
-          <button class="destroy"></button>
-        </div>
-        <input class="edit" value="Rule the web">
-      </li>
-    </ul>
-    <!-- <todo-list list="todos"></todo-list> -->
-  </section>
+  <app-new-todo [todosService]="todosService"></app-new-todo>
+  <app-todo-list [todosService]="todosService"></app-todo-list>
   <!-- This footer should hidden by default and shown when there are todos -->
   <footer class="footer">
     <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>{{  'todos.length' }}</strong> item left</span>
+    <span class="todo-count"><strong>{{ todosService.items.length }}</strong> item left</span>
     <!-- Remove this if you don't implement routing -->
     <ul class="filters">
       <li>
