--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,15 +1,15 @@
 <!-- This section should be hidden by default and shown when there are todos -->
-<section class="main">
+<section class="main" *ngIf="todosService.items.length">
   <input class="toggle-all" type="checkbox" [(ngModel)]="allCompleted" (change)="toggleAll(this)">
   <label for="toggle-all" (click)="completeAll()">Mark all as complete</label>
-  <ul class="todo-list" *ngIf="items">
+  <ul class="todo-list">
     <!-- These are here just to show the structure of the list items -->
     <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-    <li *ngFor="let item of items" [class.completed]="item.completed" [class.editing]="item === editing">
+    <li *ngFor="let item of todosService.items" [class.completed]="item.completed" [class.editing]="item === editing">
       <div class="view">
-        <input class="toggle" type="checkbox" [(ngModel)]="item.completed">
+        <input class="toggle" type="checkbox" [(ngModel)]="item.completed" (change)="onCompleted()">
         <label (dblclick)="editItem(item, itemInput)">{{ item.name }}</label>
-        <button class="destroy" (click)="removeItem(item)"></button>
+        <button class="destroy" (click)="todosService.removeItem(item)"></button>
       </div>
       <input #itemInput class="edit" value="{{ item.name }}" [(ngModel)]="item.name" (blur)="editing = null" (keyup.enter)="editing = null">
     </li>
